--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spds.school",
+  "name": "dussh.school",
   "version": "1.0.0",
-  "description": "Сайт СПДС «Колосок» ГБОУ СОШ пос. Комсомольский",
+  "description": "Сайт СП ДЮСЩ ГБОУ СОШ пос. Комсомольский",
   "main": "Gruntfile.js",
   "scripts": {
     "test": "grunt -v speed",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KSOSH/spds-site.git"
+    "url": "git+https://github.com/KSOSH/dussh-site.git"
   },
   "author": "ProjectSoft <projectsoft2009@yandex.ru>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/KSOSH/spds-site/issues"
+    "url": "https://github.com/KSOSH/dussh-site/issues"
   },
-  "homepage": "https://github.com/KSOSH/spds-site#readme",
+  "homepage": "https://github.com/KSOSH/dussh-site#readme",
   "devDependencies": {
     "grunt": "^1.3.0",
     "grunt-autoprefixer": "^3.0.4",
