--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -25,6 +25,8 @@ jobs:
           server-dir: ${{ secrets.DIRECTORY }}
           local-dir: ./site/
           state-name: .status.json
+          exclude: |
+            **/viewer/**
       - name: Remove Status
         uses: StephanThierry/ftp-delete-action@v2.1
         with:
