--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -27,6 +27,8 @@ jobs:
           state-name: .status.json
           exclude: |
             **/viewer/**
+            **/assets/templates/projectsoft/images/**
+            **/assets/templates/projectsoft/fonts/**
       - name: Remove Status
         uses: StephanThierry/ftp-delete-action@v2.1
         with:
